--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "homepage": "https://github.com/Trybe-T9/reTry-BackEnd#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-rescue": "^1.1.31"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
