--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "express-rescue": "^1.1.31"
+    "express-rescue": "^1.1.31",
+    "pg": "^8.6.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
