--- a/ecosystem.config.yml
+++ b/ecosystem.config.yml
@@ -1,3 +1,14 @@
-apps:
-- name: reTry-backend
-  script: ./src/server.js
+module.exports = {
+  apps : [{
+    name: "reTry-backend",
+    script: "./src/server.js",
+    instances: "max",
+    exec_mode : "cluster",
+    env: {
+      NODE_ENV: "development",
+    },
+    env_production: {
+      NODE_ENV: "production",
+    }
+  }]
+}
