--- a/package.json
+++ b/package.json
@@ -30,11 +30,14 @@
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0",
     "pg": "^8.6.0",
-    "pm2": "^5.1.0"
+    "pg-hstore": "^2.3.4",
+    "pm2": "^5.1.0",
+    "sequelize": "^6.6.5"
   },
   "devDependencies": {
     "eslint": "^7.31.0",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "sequelize-cli": "^6.2.0"
   },
   "engines": {
     "node": "14.x"
