--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "pm2-runtime start ecosystem.config.js",
+    "start": "pm2-runtime start ecosystem.config.yml",
     "dev": "nodemon ./src/server.js"
   },
   "repository": {
