fix pm2 add 250mb memoria, removido o cluster

--- a/ecosystem.config.yml
+++ b/ecosystem.config.yml
@@ -1,6 +1,5 @@
 apps:
   - name: reTry-backend
     script: ./src/server.js
-    exec_mode: cluster
-    instances: 2
+    max_memory_restart: 250M
     
