--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "dropbox": "^10.6.0",
     "ejs": "^3.1.6",
     "eslint-config-trybe-backend": "^1.0.4",
     "express": "^4.17.1",
     "express-rescue": "^1.1.31",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0",
+    "multer": "^1.4.3",
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.4",
     "pm2": "^5.1.0",
